# grid-sim

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  entrypoint.sh  plan.md
.claude/commands/: architect-agent.md  auto-plan.md  auto.md  branchcommit.md  commit-push-pr.md  explain-agent.md  optimize-agent.md  permissions.md  refactor-agent.md  review-agent.md  security-agent.md  simplify-agent.md
.github/workflows/: daily-backfill.yml
app/: index.html  package-lock.json  package.json  vite.config.ts
app/public/: ba-boundaries.geojson
app/src/: App.tsx  index.css  main.tsx  types.ts
app/src/components/: Analytics.tsx  BAInfoPanel.tsx  ChartTitle.tsx  Dispatch.tsx  GridMap.tsx  HUD.tsx  ModeBar.tsx  NodeTooltip.tsx
app/src/components/charts/: BaHourHeatmap.tsx  BaScatter.tsx  CarbonLine.tsx  ChartLegend.tsx  DuckCurve.tsx  FuelMixArea.tsx  GridTrend.tsx  RenewablePenetration.tsx  chartUtils.ts
app/src/data/: ba.ts  plants.ts
app/src/hooks/: useAnalyticsData.ts  useCarbonData.ts  useGenerationData.ts  useGridData.ts  useHeatmapData.ts  useHistoryData.ts  useRangeData.ts  useTrendData.ts
crates/backfill/: Cargo.toml
crates/backfill/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: analytics.rs  domain.rs  eia.rs  handlers.rs  labels.rs  main.rs  parquet.rs  query.rs  types.rs
