[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
dotenvy = "0.15"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
moka    = { version = "0.12", features = ["future"] }
polars  = { version = "0.41", features = ["lazy", "parquet"] }
tracing = "0.1"
tracing-subscriber = "0.3"
